Pieuvre/tests/Proofs/ShouldFail/syntaxerror.8pus
Goal A -> B.
zjgkhuzeg.
intro.
